- fixed: z-indexs for work containers

--- a/assets/css/indexStyles.css
+++ b/assets/css/indexStyles.css
@@ -169,7 +169,7 @@ div#workContainerCont {
     justify-content: center;
     align-items: center;
     background-color:  #F1FAEE;
-    z-index: 999;
+
 }
 
 #workContainerCont .row {
